# pawtrails-api

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  backend.dockerfile  docker-compose.debug.yml  docker-compose.online.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
alembic/versions/: ad27fb894f8d_create_initial_database.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/api/: deps.py
app/api/v0/: api.py
app/api/v0/routes/: follow.py  location.py  login.py  pet.py  user.py  users.py
app/core/: database.py  security.py  settings.py
app/crud/: __init__.py  base.py  user.py
app/db/: __ini__.py  base.py  init.py  session.py
app/models/: __init__.py  pet.py  user.py
app/schemas/: __init__.py  user.py
docs/dbdiagram/: dbdiagram.sql  dbdiagram.txt
pawtrails/: main.py  utils.py
pawtrails/api/: deps.py
pawtrails/api/v0/: api.py
pawtrails/api/v0/routes/: location.py  login.py  me.py  pet.py  user.py
pawtrails/core/: database.py  security.py  settings.py
pawtrails/database/: __init__.py  base.py  exceptions.py  neo4j.py
pawtrails/models/: base.py  constants.py  location.py  pet.py  review.py  tag.py  user.py
pawtrails/scripts/: database.py
tests/: conftest.py  main_test.py
tests/api/: data_test.py
tests/api/v0/: 0_login_test.py  1_user_test.py  pet_test.py
